--- a/css/conexihon2.styles.css
+++ b/css/conexihon2.styles.css
@@ -768,7 +768,7 @@ article .field--name-body {
     .view-search-index table tr.even {
       background-color: white; }
     /* line 93, ../sass/components/_node.scss */
-    .view-search-index table td.views-field-body-value {
+    .view-search-index table td.views-field-body-value, .view-search-index table th.views-field-body-value {
       display: none; }
   /* line 99, ../sass/components/_node.scss */
   .view-search-index #edit-search-api-views-fulltext-wrapper .description {
@@ -780,8 +780,8 @@ article .field--name-body {
 /********************TABLET*******************************/
 @media (min-width: 40em) {
   /* line 128, ../sass/components/_node.scss */
-  .view-search-index table td.views-field-body-value {
-    display: visible; } }
+  .view-search-index table td.views-field-body-value, .view-search-index table th.views-field-body-value {
+    display: table-row; } }
 /******************** DESKTOP *******************************/
 /************* Videos ********************/
 /* Generated by Font Squirrel (http://www.fontsquirrel.com) on October 18, 2014 */
